# -TERMINAL-GAME-Othello

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: board.cpp  game.cpp  main.cpp  renderer.cpp  utils.cpp
src/headers/: board.hpp  game.hpp  renderer.hpp  utils.hpp
